This makes tracker reports a little more accurate, as well as showing the "Sending Errors" in the, "The Basics" section

--- a/dada/templates/plugins/tracker/message_report.tmpl
+++ b/dada/templates/plugins/tracker/message_report.tmpl
@@ -171,7 +171,7 @@
 			</tr>
 
 	
-	
+		
 			<tr>
 			<td> 
 			 <p>
@@ -190,8 +190,29 @@
 			 </p>
 			</td> 
 			</tr>	
-	
+			
+			
+			
 			<tr class="alt">
+			<td> 
+			 <p>
+			  <strong>
+			   <a href="#" class="to_sending_errors">Sending Errors</a>
+			  </strong> 
+			 </p> 
+			 </td> 
+			 <td> 
+			 <p style="text-align:right"> 
+			  <a href="#" class="to_sending_errors">
+			  <strong><!-- tmpl_var errors_sending_to  default="0" --></strong> 
+			- <strong><!-- tmpl_var errors_sending_to_percent -->%</strong>
+			</a>
+			 </p>
+			</td> 
+			</tr>
+	
+	
+			<tr>
 			<td> 
 			 <p>
 			  <strong>
@@ -208,7 +229,7 @@
 	
 	
 	
-			<tr>
+			<tr  class="alt">
 			<td> 
 			 <p>
 			  <strong>
