Change colors on the button

--- a/dada/templates/membership.tmpl
+++ b/dada/templates/membership.tmpl
@@ -109,8 +109,8 @@
 							<input type="hidden" name="address" value="<!-- tmpl_var email -->" />
 							<input type="hidden" name="return_to" value="membership" />
 							<input type="hidden" name="return_address" value="<!-- tmpl_var email -->" />
-							<input type="submit" name="process"  class="plain" value="Approve Subscription Request" />
-							<input type="submit" name="process"  class="plain" value="Deny Subscription Request" />
+							<input type="submit" name="process"  class="processing" value="Approve Subscription Request" />
+							<input type="submit" name="process"  class="cautionary" value="Deny Subscription Request" />
 						</form>
 						</fieldset>
 					<!-- /tmpl_if -->
