Getting pretty close to a workable thingy!

--- a/dada/templates/send_email_screen.tmpl
+++ b/dada/templates/send_email_screen.tmpl
@@ -41,8 +41,8 @@
  <input type="hidden" name="support_files_url" id="support_files_url" value="<!-- tmpl_var SUPPORT_FILES_URL -->" />
 
 
- <input type="hidden" name="f" value="send_email" />
- <input type="hidden" name="advanced" value="yes" />
+ <input type="hidden" name="f"         value="send_email" />
+ <input type="hidden" id="has_draft" name="has_draft" value="<!-- tmpl_var has_draft default="0" -->" /> 
 	  
 <!-- tmpl_include message_headers_fieldset_widget.tmpl --> 
 <fieldset> 
