--- a/dada/templates/send_a_list_message_button_widget.tmpl
+++ b/dada/templates/send_a_list_message_button_widget.tmpl
@@ -1,8 +1,16 @@
 <!-- begin send_a_list_message_button_widget.tmpl -->
 
 <div class="buttonfloat">
+	
+<!-- tmpl_unless expr="(mass_mailing_type eq 'invite')" -->
+	<input type="submit" class="processing savedraft"  name="process" id="submit_draft" value="Save as Draft" />
+<!-- /tmpl_unless -->
+	
  <input type="submit" class="cautionary sendmassmailing justatest"  name="process" id="submit_test_mailing" value="<!-- tmpl_if expr="(mass_mailing_type eq 'invite')" -->Send a Test Invitation<!-- tmpl_else -->Send a Test Message<!-- /tmpl_if -->" />
  <input type="submit" class="processing sendmassmailing"            name="process" id="submit_mass_mailing" value="<!-- tmpl_if expr="(mass_mailing_type eq 'invite')" -->Send Invitations<!-- tmpl_else -->Send Mass Mailing<!-- /tmpl_if -->" />
+
+
+
  <input type="hidden" id="default_mass_mailing_button_label" name="default_mass_mailing_button_label" value="<!-- tmpl_if expr="(mass_mailing_type eq 'invite')" -->Send Invitations<!-- tmpl_else -->Send Mass Mailing<!-- /tmpl_if -->" />
 </div>
 <br />
