--- a/dada/templates/plugins/bounce_handler/cl_help.tmpl
+++ b/dada/templates/plugins/bounce_handler/cl_help.tmpl
@@ -107,7 +107,7 @@ Testing Bounce Handler via the Command Line
 
 You can pass the B<--test> argument to bounce_handler.cgi to make
 sure everything is workings as it should. The B<--test> argument needs to 
-take one of a few paramaters: 
+take one of a few parameters: 
 
 
 * pop3
