--- a/dada/templates/draft_saved_notification_widget.tmpl
+++ b/dada/templates/draft_saved_notification_widget.tmpl
@@ -5,7 +5,7 @@
 <div class="buttonfloat">
 <input type="button" id="keep_working_on_draft"     value="Keep Working on This Message"   class="processing" /> 
 <input type="button" id="show_all_drafts"           value="Show All My Drafts"             class="processing" /> 
-<input type="button" id="create_a_new_mass_mailing" value="Start a New Message"            class="processing" /> 
+<input type="button" id="create_a_new_mass_mailing" value="Create a New Message"            class="processing" /> 
 </div> 
 <div class="floatclear"></div>
 
