--- a/dada/templates/drafts.tmpl
+++ b/dada/templates/drafts.tmpl
@@ -114,7 +114,7 @@
 
 			</td>
 			<td>
-					<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="POST">
+					<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="POST" id="delete_draft_form">
 						<input type="hidden" name="id" value="<!-- tmpl_var id -->" />
 						<input type="hidden" name="flavor" value="delete_draft" /> 
 							<input type="submit" name="" value="&#8855;" class="alertive" />  		
