Stuff works, now!

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -979,6 +979,13 @@ editors also have the ability to make simple HTML tables for basic layouts.
 	</p>
 
 	<p>
+		<input type="checkbox" name="debugging_options_DADA_MailingList_MessageDrafts" id="debugging_options_DADA_MailingList_MessageDrafts" value="1"  />			
+		<label for="debugging_options_DADA_MailingList_MessageDrafts">
+			DADA::MailingList::MessageDrafts
+		</label>
+	</p>
+
+	<p>
 		<input type="checkbox" name="debugging_options_DBI" id="debugging_options_DBI" value="1"  />			
 		<label for="debugging_options_DBI">
 			DBI
