--- a/dada/templates/example_dada_config.tmpl
+++ b/dada/templates/example_dada_config.tmpl
@@ -177,7 +177,8 @@ $DEBUG_TRACE = {
     DADA_Mail_Send                     => <!-- tmpl_var debugging_options_DADA_Mail_Send  default="0" -->,
     DADA_App_BounceHandler_ScoreKeeper => <!-- tmpl_var debugging_options_DADA_App_BounceHandler_ScoreKeeper  default="0" -->,
     DADA_MailingList_baseSQL           => <!-- tmpl_var debugging_options_DADA_MailingList_baseSQL  default="0" -->,
-
+    DADA_MailingList_MessageDrafts     => <!-- tmpl_var debugging_options_DADA_MailingList_MessageDrafts  default="0" -->, 
+	
 };
 
 %CPAN_DEBUG_SETTINGS = (
